--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "bank-account-validator",
-  "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
+  "name": "moip-validator-service",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "grunt jasmine"
+    "start": "node ./bin/www"
   },
-  "author": "Moip Pagamentos",
-  "license": "ISC",
-  "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-aws": "0.6.2",
-    "grunt-bump": "0.8.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-jasmine": "^1.1.0",
-    "grunt-contrib-jshint": "1.1.0",
-    "grunt-contrib-uglify": "2.3.0",
-    "grunt-template-jasmine-istanbul": "~0.5.0"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0"
   }
 }
